--- a/html-css-1/index.html
+++ b/html-css-1/index.html
@@ -4,26 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The More You Know</title>
-    <link rel = "stylesheet" href="style.css">
     <link rel = "Stylesheet" href="reset.css">
-    
+    <link rel = "stylesheet" href="style.css">
 
 </head>
 <body>
-    <header>
+    <header id ='main-header'>
         <h1>Company</h1>
         <nav class = 'navButtons'>Home</nav>
         <nav class = 'navButtons'>About</nav>
         <nav class = 'navButtons'>Contact</nav>
     </header>
-    <section>
-        <span class= 'squareBox'></span>
-        <span class= 'squareBox'></span>
-        <span class= 'squareBox'></span>
-        <span class= 'recBox'></span>
-        <span class= 'recBox'></span>
-        <p id ='paragraph'>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In dapibus tincidunt ipsum, quis rhoncus augue lacinia vel. Morbi interdum quis ante sed consequat. Sed feugiat maximus eros in ullamcorper. Integer vel ante neque. Etiam vestibulum, elit vel consequat malesuada, dolor dolor varius diam, quis scelerisque ante nulla sed nisl. Nam varius augue sit amet ex rhoncus, vitae suscipit turpis volutpat. Vestibulum quis lorem ac diam suscipit porta. Suspendisse tristique congue nibh, eu placerat dolor rhoncus vitae. Nulla iaculis dolor et finibus molestie. Quisque pretium nisl ac nisi cursus, sed tempor dui sollicitudin. Quisque diam lectus, tincidunt non suscipit vulputate, eleifend ac orci. Etiam vel ex lacinia, vehicula turpis at, feugiat orci. Nam imperdiet eleifend ligula sed varius. Nunc eget viverra mi. Etiam nec scelerisque orci.</p>
-        <img></img>
+    <section id ='LowerBox'>The More You Know</section>
+    <section id ='centerPage'>
+        <section class= 'top-row'></section>
+        <section class= 'top-row'></section>
+        <section class= 'top-row'></section>
+        <section class='center-row'></section>
+        <section class='center-row'></section>
+        <section class='bottom-row'><p id ='paragraph'>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In dapibus tincidunt ipsum, quis rhoncus augue lacinia vel. Morbi interdum quis ante sed consequat. Sed feugiat maximus eros in ullamcorper. Integer vel ante neque. Etiam vestibulum, elit vel consequat malesuada, dolor dolor varius diam, quis scelerisque ante nulla sed nisl. Nam varius augue sit amet ex rhoncus, vitae suscipit turpis volutpat. Vestibulum quis lorem ac diam suscipit porta. Suspendisse tristique congue nibh, eu placerat dolor rhoncus vitae. Nulla iaculis dolor et finibus molestie. Quisque pretium nisl ac nisi cursus, sed tempor dui sollicitudin. Quisque diam lectus, tincidunt non suscipit vulputate, eleifend ac orci. Etiam vel ex lacinia, vehicula turpis at, feugiat orci. Nam imperdiet eleifend ligula sed varius. Nunc eget viverra mi. Etiam nec scelerisque orci.</p></section>
+        <section class='bottom-row'></section>
     </section>
     
     <footer></footer>
